# ax-ai-sales-agent

./: README.md
apps/backend/: .gitignore  pyproject.toml  requirements.txt
apps/backend/src/: config.py  main.py  run.py
apps/backend/src/api/: routes_chat.py  routes_chat_ws.py  routes_health.py
apps/backend/src/models/: __init__.py  conversation.py  db.py  lead.py  message.py
apps/backend/src/services/: datetime_parser.py  email_service.py  openai_service.py  scoring_service.py  state_service.py  tools_service.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/: App.jsx  main.jsx
apps/frontend/src/components/: ChatWidget.jsx  Chatbot.jsx
infra/: docker-compose.yml
infra/nginx/: default.conf
