[project]
name = "ai-sales-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "redis==5.0.8",
  "openai==1.53.0",
  "python-dateutil==2.9.0.post0",
  "dateparser==1.2.0",
  "httpx==0.27.2",
  "email-validator==2.1.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
