[tool.poetry]
name = "ai-sales-agent"
version = "0.1.0"
description = "Autonomous AI sales agent with conversation, lead scoring, and automation tools"
authors = ["AccellionX <dev@accellionx.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI & Web
fastapi = "0.115.2"
uvicorn = {extras = ["standard"], version = "0.30.6"}
websockets = "^12.0"
python-multipart = "^0.0.6"

# Pydantic
pydantic = "2.9.2"
pydantic-settings = "2.5.2"

# Database
sqlalchemy = "2.0.36"
psycopg = {extras = ["binary"], version = "3.2.3"}
alembic = "^1.12.1"

# Redis
redis = "5.0.8"

# OpenAI
openai = "1.53.0"

# Google Calendar Integration
google-auth = "^2.25.2"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.110.0"

# Email (SendGrid)
sendgrid = "^6.11.0"

# Utilities
python-dateutil = "2.9.0.post0"
dateparser = "1.2.0"
httpx = "0.27.2"
email-validator = "2.1.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pytz = "^2023.3"
aiosmtplib = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]